@@ -1,3 +1,8 @@
+2006-01-28  Darin Adler  <darin@apple.com>
+
+        * DumpRenderTree/DumpRenderTree.m: (dump): Dump the image if it's not
+        already there, even if the checksum is correct.
+
 2006-01-27  Eric Seidel  <eseidel@apple.com>
 
         Reviewed by adele.
